--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
+  "name": "masksNOW",
+  "description": "MasksNOW connects mask makers with those in need.",
+  "version": "0.1",
   "author": "Austin Green",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
@@ -17,6 +18,7 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.3.1",
+    "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -33,6 +35,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "styled-components": "^5.0.1",
     "uuid": "^3.2.1"
   },
   "keywords": [
