--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,35 +30,35 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/index.md"
+      - file: "src/pages/index-page.md"
         label: "Landing Page"
         name: "index"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
-      - file: "src/pages/request-supplies/index.md"
+      - file: "src/pages/request-supplies/index-page.md"
         label: "Request Supplies"
         name: "request-supplies"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
-      - file: "src/pages/patterns/index.md"
+      - file: "src/pages/patterns/index-page.md"
         label: "Patterns"
         name: "patterns"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
-      - file: "src/pages/groups-directory/index.md"
+      - file: "src/pages/groups-directory/index-page.md"
         label: "Groups Directory"
         name: "groups-directory"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
-      - file: "src/pages/volunteer/index.md"
+      - file: "src/pages/volunteer/index-page.md"
         label: "Volunteer"
         name: "volunteer"
         fields:
