--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-remark-copy-linked-files": "^2.0.7",
+    "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.2.3",
