--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-pdfobject": "^1.1.1",
     "styled-components": "^5.0.1",
     "uuid": "^3.2.1"
   },
