--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -76,9 +76,15 @@ collections:
             name: "patterns", 
             widget: "list", 
             collapsed: false,
-            default: [], 
             fields: 
-              - { label: "Name", name: "title", widget: "string"}
+              - { label: "Name", name: "title", widget: "string" }
+              - { 
+                  label: "File", 
+                  name: "file", 
+                  widget: "markdown", 
+                  allow_multiple: false,
+                  media_library: { config: { media_folder: "static/docs"}}
+                }
               - { label: "Description", name: "body", widget: "markdown" }
            }
       - file: "src/pages/groups-directory/index.md"
