use file widget for file object duhhh

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -82,7 +82,7 @@ collections:
                   {
                     label: "File",
                     name: "file",
-                    widget: "markdown",
+                    widget: "file",
                     allow_multiple: false,
                     media_library: { config: { media_folder: "static/docs" } },
                   },
