--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,7 +38,7 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/request-supplies/index.md"
-        label: "Request Supplies"
+        label: "Request Masks"
         name: "request-supplies"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
