--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -61,6 +61,9 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
       - file: "src/pages/volunteer/index.md"
         label: "Volunteer"
         name: "volunteer"
@@ -68,6 +71,9 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
       - file: "src/pages/faq/index.md"
         label: "Faq"
         name: "faq"
@@ -75,6 +81,9 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
       - file: "src/pages/contact/index.md"
         label: "Contact"
         name: "contact"
@@ -82,6 +91,9 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
       - file: "src/pages/psa/index.md"
         label: "Psa"
         name: "psa"
@@ -89,6 +101,9 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
       - file: "src/pages/about-us/index.md"
         label: "About Us"
         name: "about-us"
@@ -96,3 +111,6 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Description", name: "description", widget: "string"}
+          - {label: "Keywords", name: "keywords", widget: "string"}
+          - {label: "Featured Image", name: "featuredimage", widget: image}
