--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,7 +42,7 @@ collections:
         label: "Request Masks"
         name: "request-supplies"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/patterns/index.md"
@@ -70,14 +70,14 @@ collections:
         label: "Groups Directory"
         name: "groups-directory"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/volunteer/index.md"
         label: "Volunteer"
         name: "volunteer"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "request-supplies"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/faq/index.md"
