--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.9",
     "babel-plugin-styled-components": "^1.10.7",
     "bulma": "^0.8.0",
+    "formik": "^2.1.4",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-catch-links": "^2.2.1",
