--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,24 +27,9 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
-  - name: "pages"
-    label: "Pages"
+  - name: "patterns"
+    label: "Patterns"
     files:
-      - file: "src/pages/index.md"
-        label: "Landing Page"
-        name: "index"
-        fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
-          - {label: "Use Infographic HomePage", name: "infographicHomepage", widget: "boolean"}
-      - file: "src/pages/request-supplies/index.md"
-        label: "Request Masks"
-        name: "request-supplies"
-        fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/patterns/index.md"
         label: "Patterns"
         name: "patterns"
@@ -64,6 +49,31 @@ collections:
         name: "pocket-pattern"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "patterns"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/patterns/t-shirt-mask-pattern.md"
+        label: "T-shirt Pattern"
+        name: "t-shirt-mask-pattern"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "patterns"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
+  - name: "pages"
+    label: "Pages"
+    files:
+      - file: "src/pages/index.md"
+        label: "Landing Page"
+        name: "index"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Use Infographic HomePage", name: "infographicHomepage", widget: "boolean"}
+      - file: "src/pages/request-supplies/index.md"
+        label: "Request Masks"
+        name: "request-supplies"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "info-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/groups-directory/index.md"
