--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,14 +29,16 @@ collections:
 
   - name: "patterns"
     label: "Patterns"
-    folder: "src/patterns"
+    folder: "content/patterns"
     create: true
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "patterns"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Alternate Title (used on the front page in the list views)", name: "alternateTitle", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description (shown as detail text on patterns page)", name: "description", widget: "text"}
       - {label: "Pattern Art Image", name: "patternArt", widget: image}
+      - {label: "Pattern PDF File", name: "patternFile", widget: file}
       - {label: "Meets Guidelines", name: "meetsGuidelines", default: true, widget: "boolean"}
       - {label: "Can Be Used For Donations", name: "forDonations", default: true, widget: "boolean"}
       - {label: "No Sewing Machine Required", name: "noSewingMachine", default: false, widget: "boolean"}
