--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -44,6 +44,7 @@ collections:
       - {label: "No Sewing Machine Required", name: "noSewingMachine", default: false, widget: "boolean"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Order listed", name: "order", widget: "number"}
+      - {label: "Hide From Infographic Front Page List", name: "hideFromFront", widget: "boolean", default: false}
   - name: "pages"
     label: "Pages"
     files:
