--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -46,12 +46,22 @@ collections:
       - {label: "Order listed", name: "order", widget: "number"}
       - {label: "Hide From Infographic Front Page List", name: "hideFromFront", widget: "boolean", default: false}
       - {label: "Last Updated Date", name: "updatedDate", widget: "datetime"}
+  - name: "resourceLanding"
+    label: "Resource Landing Page"
+    files:
+      - file: "content/resources/index.md"
+        label: "Resources Landing Page"
+        name: "index"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "resources"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
   - name: "resources"
     label: "Downloadable Resources"
     folder: "content/resources"
     create: true
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "patterns"}
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "resources"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description (shown as detail text on resources page)", name: "description", widget: "text"}
