--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.3.2",
     "babel-plugin-styled-components": "^1.10.7",
     "bulma": "^0.8.0",
+    "cleave.js": "^1.5.10",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.0",
+    "formik": "^2.1.4",
     "gatsby": "^2.13.31",
+    "gatsby-env-variables": "^2.0.0",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -40,13 +47,20 @@
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
     "node-sass": "^4.11.0",
+    "polished": "^3.5.1",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-pdfobject": "^1.1.1",
+    "styled-breakpoints": "^8.1.0",
     "styled-components": "^5.0.1",
-    "uuid": "^3.2.1"
+    "styled-css-grid": "^1.2.1",
+    "typeface-assistant": "^0.0.75",
+    "typeface-oswald": "^1.1.4",
+    "typography": "^0.16.19",
+    "uuid": "^3.2.1",
+    "yup": "^0.28.3"
   },
   "keywords": [
     "gatsby"
@@ -55,9 +69,9 @@
   "main": "n/a",
   "scripts": {
     "clean": "gatsby clean",
-    "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "start": "BUILD_ENV=development yarn run develop",
+    "build": "yarn run clean && gatsby build",
+    "develop": "yarn run clean && gatsby develop",
     "format": "prettier --config ./prettier.config.js --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
