--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
   "scripts": {
     "clean": "gatsby clean",
     "start": "BUILD_ENV=development yarn run develop",
-    "build": "yarn run clean && gatsby build",
+    "build:local": "ROSIE_ENV=development yarn run clean && gatsby build",
+    "build": "ROSIE_ENV=development yarn run clean && gatsby build",
+    "build:production": "ROSIE_ENV=production yarn run clean && gatsby build",
     "develop": "yarn run clean && gatsby develop",
     "format": "prettier --config ./prettier.config.js --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
