--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "babel-plugin-styled-components": "^1.10.7",
@@ -43,6 +45,7 @@
     "gatsby-transformer-sharp": "^2.2.3",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "material-ui-popup-state": "^1.5.4",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
@@ -53,6 +56,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-pdfobject": "^1.1.1",
+    "react-use": "^14.1.1",
     "styled-breakpoints": "^8.1.0",
     "styled-components": "^5.0.1",
     "styled-css-grid": "^1.2.1",
