--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,8 +37,8 @@ collections:
       - {label: "Alternate Title (used on the front page in the list views)", name: "alternateTitle", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description (shown as detail text on patterns page)", name: "description", widget: "text"}
-      - {label: "Pattern Art Image", name: "patternArt", widget: image}
-      - {label: "Pattern PDF File", name: "patternFile", widget: file, default: "/img/pattern-any-pattern-01.png"}
+      - {label: "Pattern Art Image", name: "patternArt", widget: image, default: "/img/pattern-any-pattern-01.png"}
+      - {label: "Pattern PDF File", name: "patternFile", widget: file, required: false}
       - {label: "Meets Guidelines", name: "meetsGuidelines", default: true, widget: "boolean"}
       - {label: "Can Be Used For Donations", name: "forDonations", default: true, widget: "boolean"}
       - {label: "No Sewing Machine Required", name: "noSewingMachine", default: false, widget: "boolean"}
@@ -78,8 +78,8 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description (shown as detail text on resources page)", name: "description", widget: "text"}
-      - {label: "Resource Art Image", name: "resourceArt", widget: image}
-      - {label: "Resource PDF File", name: "resourceFile", widget: file, default: "/img/cleaning-packing.png"}
+      - {label: "Resource Art Image", name: "resourceArt", widget: image, default: "/img/cleaning-packing.png"}
+      - {label: "Resource PDF File", name: "resourceFile", widget: file}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Order listed", name: "order", widget: "number"}
       - {label: "Last Updated Date", name: "updatedDate", widget: "datetime"}
