Enforce node version in package.json
Specifies the `engines` field since the project doesn't currently build
on the latest version of node  (v13). Running npm or yarn will now error
out immediately if using a version other than v12 and hopefully prevent
any wasted time for new devs.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "MasksNOW connects mask makers with those in need.",
   "version": "0.1.0",
   "author": "Garrett, Jon, Chaney",
+  "engines": {
+    "node": "12.*"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
