Specify the base site url for the different environments
The facebook and twitter crawlers expect the metadata links to use
absolute urls so in order to be able test to the seo changes we needed
to configure the base url and the quickest way seemed to hardcode it for
staging and this particular pull request in the `netlify.toml`.
These could be updated as needed for testing.

Ideally we'd be able to leverage the netlify DEPLOY_URL environment
variable but I wasn't able to get it working.

--- a/netlify.toml
+++ b/netlify.toml
@@ -19,6 +19,7 @@
   [context.deploy-preview.environment]
     GATSBY_EXPRESS_API_PATH = "https://us-central1-created-for-crisis-development.cloudfunctions.net/app"
     GATSBY_ROSIE_ENV = "deploy-preview"
+    GATSBY_ROSIE_URL = "https://deploy-preview-127--eloquent-montalcini-4aed93.netlify.app"
 
 [context.branch-deploy]
   command = "npm run build"
@@ -26,3 +27,4 @@
   [context.branch-deploy.environment]
     GATSBY_EXPRESS_API_PATH = "https://us-central1-created-for-crisis-development.cloudfunctions.net/app"
     GATSBY_ROSIE_ENV = "branch-deploy"
+    GATSBY_ROSIE_URL = "https://staging--eloquent-montalcini-4aed93.netlify.app"
